--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid content">
-  <div class="row ">
+  <div class="row borda">
     <div class="col-md-3 nav-left  p-3">
       <div class="row  d-flex flex-column align-items-center">
         <div class="col-md-9 m-0 p-0">
@@ -48,7 +48,7 @@
             <h5>Seus últimos posts</h5>
           </div>
         </div>
-        <div class="row d-flex justify-content-center mb-3 box-last-post ">
+        <div class="row d-flex justify-content-center mb-2 box-last-post ">
           <div class="box-last-post d-flex justify-content-center">
             <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
               <img src="https://i.imgur.com/AfOVVeN.png" alt="">
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="row d-flex justify-content-center mb-3  box-last-post ">
+        <div class="row d-flex justify-content-center mb-2  box-last-post ">
           <div class="box-last-post d-flex justify-content-center">
             <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
               <img src="https://i.imgur.com/AfOVVeN.png" alt="">
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-        <div class="row d-flex justify-content-center mb-3  box-last-post ">
+        <div class="row d-flex justify-content-center mb-2  box-last-post ">
           <div class="box-last-post d-flex justify-content-center">
             <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
               <img src="https://i.imgur.com/AfOVVeN.png" alt="">
@@ -78,7 +78,7 @@
             </div>
           </div>
         </div>
-        <div class="row d-flex justify-content-center mb-3  box-last-post ">
+        <div class="row d-flex justify-content-center mb-2  box-last-post ">
           <div class="box-last-post d-flex justify-content-center">
             <div class="col-md-2  d-flex justify-content-center align-items-center mr-2">
               <img src="https://i.imgur.com/AfOVVeN.png" alt="">
@@ -95,8 +95,8 @@
     <!--                     FIM DO CARD DA LATERAL ESQUERDA                     -->
     <!-- ----------------------------------------------------------------------- -->
 
-    <div class="col-md-6 post-center">
-      <div class="row">
+    <div class="col-md-6 post-center ">
+      <div class="row ">
         <div class="col-md-12 perfil-post">
           <!-- <img src="{{foto}}" alt=""> -->
           <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
@@ -104,19 +104,63 @@
       </div>
       <div class="row">
         <div class="col-md-12 mt-5">
-          <h3 class="text-center">Lucas Cruz</h3>
+          <!-- <h3 class="text-center">Lucas Cruz</h3> -->
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12 borda post-add">
-
+      <div class="row mt-2 post">
+        <div class="col-md-12 ">
+          <div class="row mt-2">
+            <div class="col-md-12  post-profile m-0 p-0 d-flex justify-content-around">
+              <div class="col-md-1  post-profile-picture p-0 d-flex justify-content-center m-1">
+                <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
+              </div>
+              <div class="col-md-9  d-flex justify-content-center flex-column pl-2">
+                <div class="row">
+                  <h6 class="m-0">Lucas Cruz</h6>
+                </div>
+                <div class="row">
+                  <small>14 ago 2021, 13:40 pm</small>
+                </div>
+              </div>
+              <div class="col-md-1  post-profile-config d-flex flex-column align-items-end ml-3 mt-2">
+                <div class="div button-config"></div>
+                <div class="div button-config"></div>
+                <div class="div button-config"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row post-content m-2 ">
+          <div class="col-md-12 post-content-text">
+            <h6>Introdução a banco de dados</h6>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur odit dolor tempore minus eum
+              eligendi atque rerum accusamus esse commodi?</p>
+            <span>#Mysql #SqlServer</span>
+          </div>
+          <div class="col-md-12 post-content-image ">
+            <img src="https://img-c.udemycdn.com/course/240x135/669012_eb3d_2.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                       FIM DA SECTION DE POSTAGEM                        -->
+    <!-- ----------------------------------------------------------------------- -->
 
-    <div class="col-md-3 nav-right ">
-      <h5>Mentorias</h5>
+    <div class="col-md-3 nav-right p-3">
+      <div class="row events">
+        <div class="col-md-12">
+          <h5>Próximos eventos</h5>
+        </div>
+        <div class="col-md-12 event-item borda d-flex justify-content-between">
+          <div class="col-md-4 m-0 p-0 borda d-flex justify-content-center">
+            <img src="https://i.imgur.com/reyl1z6.png" alt="">
+          </div>
+          <div class="col-md-8 borda">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
