--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -90,6 +90,27 @@ p.descricao {
 
 .content {
   background: linear-gradient(180deg, rgba(214, 214, 214, 0.548) 100%, white);
+  margin-bottom: 25px;
+}
+
+.nav-left {
+  position: fixed;
+  left: 0;
+  top: 60px;
+}
+
+.post-center {
+  left: 50%;
+  transform: translateX(-50%);
+  top: 53px;
+  z-index: 1;
+  margin-bottom: 50px;
+}
+
+.nav-right {
+  position: fixed;
+  right: 0;
+  top: 60px;
 }
 
 h5 {
@@ -193,7 +214,52 @@ h5 {
   transform: translateX(-50%);
 }
 
-.post-center{
+.button {
+  position: relative;
+  width: 200px;
+}
+
+button.button-new-post {
+  width: 130px;
+  height: 50px;
+  background: #71eed0;
+  color: white;
+  position: relative;
+  top: 30px;
+  left: 10px;
+  margin-left: 20px;
+  transition: .3s ease-in-out;
+  border: none;
+  border-radius: 5px;
+}
+
+button.button-new-post:hover{
+  background:   #66d8bd;
+  border-radius: 5px;
+  transform: translateY(-5px);
+  letter-spacing: 0.5px;
+}
+
+.button-hover-1 {
+  border: 1px solid white;
+  width: 130px;
+  height: 50px;
+  position: absolute;
+  z-index: -1;
+  top: 40%;
+  left: 9%;
+  animation: move-button-1 2.5s ease-in-out infinite;
+}
+
+.button-hover-2 {
+  width: 130px;
+  height: 50px;
+  position: absolute;
+  z-index: -1;
+  border: 1px solid #67dabf;
+  right: 15%;
+  top: 82%;
+  animation: move-button-2 2.5s ease-in-out infinite;
 }
 
 .post-center h3 {
@@ -233,8 +299,8 @@ h5 {
   margin-top: 3px;
 }
 
-.post-content h6{
-  color: #377969;
+.post-content h6 {
+  color: rgb(115, 223, 187);
 }
 
 .post-content p {
@@ -242,21 +308,101 @@ h5 {
   margin-bottom: 3px;
 }
 
-.post-content span{
+.post-content span {
   color: #53b19b;
 }
 
-.post-content-image img{
+.post-content-image img {
   width: 100%;
   margin: 10px 0;
 }
 
-.nav-right{
+.nav-right {
   border-radius: 20px;
   margin-top: 5px;
 }
 
-.event-item img{
+.event-item img {
   width: 80px;
   height: 80px;
+}
+
+.event-item h6 {
+  color: rgb(115, 223, 187);
+}
+
+.event-item i {
+  color: rgb(115, 223, 187);
+}
+
+.event-item span {
+  color: #41414177;
+  font-weight: 400;
+}
+
+.event-item a {
+  font-size: 14px;
+  margin-left: 4px;
+  color: #53b19b;
+  text-decoration: none;
+  font-weight: 300;
+  transition: .5s ease-in-out;
+  font-size: 12px;
+}
+
+.event-item a:hover {
+  letter-spacing: 0.5px;
+}
+
+.nav-right-box {
+  margin-top: 30px;
+  border-radius: 20px;
+}
+
+.nav-right-box img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.mentores-online img {
+  width: 60px;
+}
+
+.perfil-online {
+  width: 15px;
+  height: 15px;
+  background: rgb(29, 148, 29);
+  border-radius: 50%;
+  top: 5px;
+  left: 10px;
+  border: 1px solid white;
+}
+
+
+@keyframes move-button-1 {
+  0%{
+    transform: translateX(0);
+    transform: translateY(0);
+  }
+  50%{
+    transform: translate(20% , 40%);
+  }
+  100%{
+    transform: translateX(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes move-button-2 {
+  0%{
+    transform: translateX(0);
+    transform: translateY(0);
+  }
+  50%{
+    transform: translate(-20% , -40%);
+  }
+  100%{
+    transform: translateX(0);
+    transform: translateY(0);
+  }
 }
