--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -6,48 +6,51 @@
 
 
     <div class="col-md-3 nav-left  p-3 d-none d-md-block">
-      <div class="row  d-flex flex-column align-items-center">
-        <div class="col-md-9 m-0 p-0">
-          <div class="button-nav-left button-1 d-flex justify-content-center align-items-center">
-            <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
-              <i class="fas fa-globe-americas"></i>
-            </div>
-            <div class="col-md-10">
-              <a lass="nav-link active font-weight-bold txt-cor" id="nav-todasPostagens-tab" data-toggle="tab"
-                href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as
-                Postagens</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-9  m-0 p-0">
-          <div class="button-nav-left d-flex justify-content-center align-items-center">
-            <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
-              <i class="fas fa-list"></i>
-            </div>
-            <div class="col-md-10 ">
-              <a href="">Minhas Postagens</a>
+      <nav class="row d-flex flex-column align-items-center pl-2">
+        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+          <div class="col-md-9 m-0 p-0">
+            <div class="button-nav-left button-1 d-flex justify-content-center align-items-center">
+              <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
+                <i class="fas fa-globe-americas"></i>
+              </div>
+              <div class="col-md-10">
+                <a id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab"
+                  aria-controls="nav-todasPostagens" aria-selected="true">Todas as
+                  Postagens</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-9  m-0 p-0">
-          <div class="button-nav-left d-flex justify-content-center align-items-center">
-            <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
-              <i class="fas fa-users"></i>
-            </div>
-            <div class="col-md-10 ">
-              <a href="">Grupos</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-9 m-0 p-0">
-          <div class="button-nav-left button-altertive d-flex justify-content-center align-items-center">
-            <div class="col-md-10 ">
-              <a href="">Veja mais</a>
+          <div class="col-md-9  m-0 p-0">
+            <div class="button-nav-left d-flex justify-content-center align-items-center">
+              <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
+                <i class="fas fa-list"></i>
+              </div>
+              <div class="col-md-10 ">
+                <a (click)='findByIdUsuario()' id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens"
+                  role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+              </div>
             </div>
           </div>
+          <div class="col-md-9  m-0 p-0">
+            <div class="button-nav-left d-flex justify-content-center align-items-center">
+              <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
+                <i class="fas fa-users"></i>
+              </div>
+              <div class="col-md-10 ">
+                <a href="">Grupos</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-9 m-0 p-0">
+            <div class="button-nav-left button-altertive d-flex justify-content-center align-items-center">
+              <div class="col-md-10 ">
+                <a href="">Veja mais</a>
+              </div>
+            </div>
+          </div>
+          <div class="caixa-left ml-2"></div>
         </div>
-        <div class="caixa-left"></div>
-      </div>
+      </nav>
 
       <div class="last-post">
         <div class="row  mt-4">
@@ -125,59 +128,83 @@
           <!-- <h3 class="text-center">Lucas Cruz</h3> -->
         </div>
       </div>
-      <nav>
-        <div class="nav nav-tabs d-flex justify-content-center " id="nav-tab" role="tablist">
-
-          <a class="nav-link active font-weight-bold txt-cor" id="nav-todasPostagens-tab" data-toggle="tab"
-            href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as
-            Postagens</a>
-
-          <a (click)='findByIdUsuario()' class="nav-link font-weight-bold txt-cor" id="nav-minhasPostagens-tab"
-            data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens"
-            aria-selected="false">Minhas Postagens</a>
-
-          <a class="nav-link font-weight-bold txt-cor" id="nav-postagemTema-tab" data-toggle="tab" href="#postagemTema"
-            role="tab" aria-controls="postagemTema" aria-selected="false">Postagens por Tema</a>
-
-        </div>
-      </nav>
 
       <!-- ----------------------------------------------------------------------- -->
       <!--                    INICIO DO COMPONENTE DE POSTAGEM                     -->
       <!-- ----------------------------------------------------------------------- -->
-
-      <div class="row mt-2 post borda">
-        <div class="col-md-12 ">
-          <div class="row mt-2">
-            <div class="col-md-12  post-profile m-0 p-0 d-flex justify-content-around">
-              <div class="col-md-1  post-profile-picture p-0 d-flex justify-content-center m-1">
-                <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
-              </div>
-              <div class="col-md-9  d-flex justify-content-center flex-column pl-2">
-                <div class="row">
-                  <h6 class="m-0">Lucas Cruz</h6>
+      <div class="tab-content mt-4" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
+          aria-labelledby="nav-todasPostagens-tab">
+          <div class="row mt-2 post mb-3" *ngFor='let item of listaPostagens | orderBy : key : reverse'>
+            <div class="col-md-12 ">
+              <div class="row mt-2">
+                <div class="col-md-12  post-profile m-0 p-0 d-flex justify-content-around">
+                  <div class="col-md-1  post-profile-picture p-0 d-flex justify-content-center m-1">
+                    <img src="{{item.usuario.foto}}" alt="">
+                  </div>
+                  <div class="col-md-9  d-flex justify-content-center flex-column pl-2">
+                    <div class="row">
+                      <h6 class="m-0">{{item.usuario.nome}}</h6>
+                    </div>
+                    <div class="row">
+                      <small>{{item.dataPublicacao}}</small>
+                    </div>
+                  </div>
+                  <div class="col-md-1  post-profile-config d-flex flex-column align-items-end ml-3 mt-2">
+                    <div class="div button-config"></div>
+                    <div class="div button-config"></div>
+                    <div class="div button-config"></div>
+                  </div>
                 </div>
-                <div class="row">
-                  <small>14 ago 2021, 13:40 pm</small>
-                </div>
               </div>
-              <div class="col-md-1  post-profile-config d-flex flex-column align-items-end ml-3 mt-2">
-                <div class="div button-config"></div>
-                <div class="div button-config"></div>
-                <div class="div button-config"></div>
+            </div>
+            <div class="row post-content m-2 ">
+              <div class="col-md-12 post-content-text">
+                <h6>{{item.titulo}}</h6>
+                <p>{{item.descricao}}</p>
+                <span>#Mysql #SqlServer</span>
+              </div>
+              <div class="col-md-12 post-content-image ">
+                <img src="{{item.liveLink}}" alt="">
               </div>
             </div>
           </div>
         </div>
-        <div class="row post-content m-2 ">
-          <div class="col-md-12 post-content-text">
-            <h6>Introdução a banco de dados</h6>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur odit dolor tempore minus eum
-              eligendi atque rerum accusamus esse commodi?</p>
-            <span>#Mysql #SqlServer</span>
-          </div>
-          <div class="col-md-12 post-content-image ">
-            <img src="https://img-c.udemycdn.com/course/240x135/669012_eb3d_2.jpg" alt="">
+
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
+          <div class="row mt-2 post borda" *ngFor='let item of usuario.postagem | orderBy : key : reverse'>
+            <div class="col-md-12 ">
+              <div class="row mt-2">
+                <div class="col-md-12  post-profile m-0 p-0 d-flex justify-content-around">
+                  <div class="col-md-1  post-profile-picture p-0 d-flex justify-content-center m-1">
+                    <img src="{{foto}}" alt="">
+                  </div>
+                  <div class="col-md-9  d-flex justify-content-center flex-column pl-2">
+                    <div class="row">
+                      <h6 class="m-0">{{nomeUsuario}}</h6>
+                    </div>
+                    <div class="row">
+                      <small>{{item.dataPublicacao}}</small>
+                    </div>
+                  </div>
+                  <div class="col-md-1  post-profile-config d-flex flex-column align-items-end ml-3 mt-2">
+                    <div class="div button-config"></div>
+                    <div class="div button-config"></div>
+                    <div class="div button-config"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row post-content m-2 ">
+              <div class="col-md-12 post-content-text">
+                <h6>{{item.titulo}}</h6>
+                <p>{{item.descricao}}</p>
+                <span>#Mysql #SqlServer</span>
+              </div>
+              <div class="col-md-12 post-content-image ">
+                <img src="{{item.liveLink}}" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -340,11 +367,11 @@
     </div>
   </div>
 
-</div>
-
   <!-- ----------------------------------------------------------------------- -->
   <!--                              FIM DO MODAL                               -->
   <!-- ----------------------------------------------------------------------- -->
+</div>
+
 
 <!-- <div class="container-fluid banner">
   <div class="row caixa-busca d-flex align-items-center justify-content-center">
