--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -172,7 +172,7 @@ h5 {
 .box-last-post {
   /* background: rgba(255, 255, 255, 0.575); */
   border-radius: 10px;
-  width: 260px;
+  width: 100%;
   height: 100%;
   padding: 5px 0;
   /* box-shadow: 2px 5px 10px rgba(27, 27, 27, 0.034); */
@@ -217,6 +217,7 @@ h5 {
 .button {
   position: relative;
   width: 200px;
+  left: 5%;
 }
 
 button.button-new-post {
@@ -233,8 +234,8 @@ button.button-new-post {
   border-radius: 5px;
 }
 
-button.button-new-post:hover{
-  background:   #66d8bd;
+button.button-new-post:hover {
+  background: #66d8bd;
   border-radius: 5px;
   transform: translateY(-5px);
   letter-spacing: 0.5px;
@@ -269,9 +270,10 @@ button.button-new-post:hover{
   font-size: 24px;
 }
 
-.nav-tabs{
+.nav-tabs {
   border: none;
 }
+
 .post {
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.575);
@@ -293,6 +295,9 @@ button.button-new-post:hover{
 .post-profile img {
   width: 60px;
   height: 60px;
+  border: 1px solid red;
+  border-radius: 50%;
+  object-fit: contain;
 }
 
 .post-profile-config .button-config {
@@ -367,6 +372,13 @@ button.button-new-post:hover{
   border-radius: 8px;
 }
 
+.caixa-online {
+  overflow-y: scroll;
+  scroll-behavior: smooth !important;
+  height: 150px;
+  width: 100%;
+}
+
 .mentores-online img {
   width: 60px;
 }
@@ -383,28 +395,32 @@ button.button-new-post:hover{
 
 
 @keyframes move-button-1 {
-  0%{
+  0% {
     transform: translateX(0);
     transform: translateY(0);
   }
-  50%{
-    transform: translate(20% , 40%);
+
+  50% {
+    transform: translate(20%, 40%);
   }
-  100%{
+
+  100% {
     transform: translateX(0);
     transform: translateY(0);
   }
 }
 
 @keyframes move-button-2 {
-  0%{
+  0% {
     transform: translateX(0);
     transform: translateY(0);
   }
-  50%{
-    transform: translate(-20% , -40%);
+
+  50% {
+    transform: translate(-20%, -40%);
   }
-  100%{
+
+  100% {
     transform: translateX(0);
     transform: translateY(0);
   }
