--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -94,7 +94,7 @@
     <!--                     INICIO SECTION DE POST                              -->
     <!-- ----------------------------------------------------------------------- -->
 
-    <div class="col-md-6 post-center">
+    <div class="col-md-6 post-center position-relative">
       <div class="row">
         <div class="col-md-12 perfil-post">
           <img src="{{foto}}" alt="">
@@ -106,8 +106,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mt-5">
+        <div class="col-md-12 d-flex justify-content-center">
           <!-- <h3 class="text-center">Lucas Cruz</h3> -->
+          <div class="input-busca position-relative mt-3">
+            <input type="text" class="form-control" name="pesquisa" placeholder="Faça uma busca"
+           [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+            <i class="fas fa-search position-absolute"></i>
+          </div>
         </div>
       </div>
 
@@ -219,7 +224,7 @@
             <i class="fas fa-suitcase mr-2"></i>
             <span class="">Luana Dias</span>
             <div class="col-md-12 d-flex justify-content-end ">
-              <a href="">Saiba mais</a>
+              <a (click)='alertaImplementacaoFutura()'>Saiba mais</a>
             </div>
           </div>
         </div>
@@ -232,7 +237,7 @@
             <i class="fas fa-suitcase mr-2"></i>
             <span class="">Pedro Nunes</span>
             <div class="col-md-12 d-flex justify-content-end ">
-              <a href="">Saiba mais</a>
+              <a (click)='alertaImplementacaoFutura()'>Saiba mais</a>
             </div>
           </div>
         </div>
