--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -14,19 +14,19 @@
                 <i class="fas fa-globe-americas"></i>
               </div>
               <div class="col-md-10">
-                <a id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab"
+                <a  id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab"
                   aria-controls="nav-todasPostagens" aria-selected="true">Todas as
                   Postagens</a>
               </div>
             </div>
           </div>
-          <div class="col-md-9  m-0 p-0">
+          <div class="col-md-9  m-0 p-0" *ngIf='verificacaoPerfil()'>
             <div class="button-nav-left d-flex justify-content-center align-items-center">
               <div class="col-md-2  m-0 p-0 pl-4 d-flex justify-content-center ">
                 <i class="fas fa-list"></i>
               </div>
-              <div class="col-md-10 ">
-                <a (click)='findByIdUsuario()' id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens"
+              <div class="col-md-10">
+                <a  (click)='findByIdUsuario()' id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens"
                   role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
               </div>
             </div>
@@ -37,14 +37,14 @@
                 <i class="fas fa-users"></i>
               </div>
               <div class="col-md-10 ">
-                <a href="">Grupos</a>
+                <a (click)='alertaImplementacaoFutura()'>Grupos</a>
               </div>
             </div>
           </div>
           <div class="col-md-9 m-0 p-0">
             <div class="button-nav-left button-altertive d-flex justify-content-center align-items-center">
               <div class="col-md-10 ">
-                <a href="">Veja mais</a>
+                <a (click)='alertaImplementacaoFutura()'>Veja mais</a>
               </div>
             </div>
           </div>
@@ -105,12 +105,12 @@
           <div class="button-hover-2"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12 d-flex justify-content-center">
+      <div class="row mt-3">
+        <div class="col-md-12 d-flex justify-content-center mt-5">
           <!-- <h3 class="text-center">Lucas Cruz</h3> -->
-          <div class="input-busca position-relative mt-3">
+          <div class="input-busca position-relative">
             <input type="text" class="form-control" name="pesquisa" placeholder="Faça uma busca"
-           [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+           [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'  [(ngModel)]='descricaoPostagem' (keyup)='findByDescricao()'>
             <i class="fas fa-search position-absolute"></i>
           </div>
         </div>
@@ -158,7 +158,7 @@
           </div>
         </div>
 
-        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
           <div class="row mt-2 post borda" *ngFor='let item of usuario.postagem | orderBy : key : reverse'>
             <div class="col-md-12 ">
               <div class="row mt-2">
