--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -43,8 +43,8 @@
             <label for="tipo">Tipo de Usuário</label>
             <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
               <option>Selecione um tipo de usúario:</option>
-              <option value="normal">Normal</option>
-              <option value="adm">Administrador</option>
+              <option value="normal">Aluno</option>
+              <option value="adm">Mentor</option>
             </select>
           </div>
 
