Inserindo textos da Home e editando campo Time de desenvolvedores

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1019,3 +1019,8 @@ footer {
 /* -------------------------------------------------------------------------- */
 /*                FIM DA ESTILIZAÇÃO DO RODAPE DA HOME-PAGE                */
 /* -------------------------------------------------------------------------- */
+
+.borda { border-radius: 50%;
+  background-position: -15px -15px;
+  height: 195px;
+  width: 195px;}
