--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -127,8 +127,8 @@
       <div class="circlue-categoria-2"></div>
       <div class="col-md-6 ml-5">
         <h2>Redescubra-se</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, praesentium. Sequi magnam minus
-          accusantium quasi aperiam totam consectetur corporis vero!</p>
+        <p>Através da Place2Getter você contará com diversos conteúdos que irão te inspirar e incentivar
+           na transformação do seu futuro profissional.</p>
       </div>
     </div>
   </div>
@@ -144,10 +144,8 @@
           experiências </h2>
         <div class="row  m-0 p-0-mentoria">
           <div class="col-md-8">
-            <p>Adipisicing culpa ea qui Lorem nulla incididunt velit labore. Velit voluptate irure adipisicing dolor
-              cupidatat sunt aute enim cillum adipisicing. Ut magna nisi nisi pariatur nulla nisi laborum et nostrud
-              nulla aute culpa Lorem voluptate. Aliquip Lorem qui pariatur velit irure officia aliqua labore nisi
-              eiusmod magna eu quis. Nisi cillum ullamco amet duis sunt aute velit est elit minim fugiat.</p>
+            <p> Compartilhe suas experiências com os jovens que estão em busca de ingressar, mudar e 
+              recomeçar suas carreiras no mercado de trabalho.</p>
           </div>
         </div>
       </div>
@@ -160,10 +158,7 @@
         <h2 class="text-center">Trocas contínuas</h2>
         <div class="row m-0 p-0">
           <div class="col-md-9">
-            <p>Adipisicing culpa ea qui Lorem nulla incididunt velit labore. Velit voluptate irure adipisicing dolor
-              cupidatat sunt aute enim cillum adipisicing. Ut magna nisi nisi pariatur nulla nisi laborum et nostrud
-              nulla aute culpa Lorem voluptate. Aliquip Lorem qui pariatur velit irure officia aliqua labore nisi
-              eiusmod magna eu quis. Nisi cillum ullamco amet duis sunt aute velit est elit minim fugiat.</p>
+            <p>Descubra novos caminhos através da troca de aprendizados que irão contribuir no seu desenvolvimento profissional.</p>
           </div>
         </div>
       </div>
@@ -207,12 +202,39 @@
     </div>
     <div class="row m-0 p-0 ">
       <div class="col-md-3  d-flex align-items-center flex-column">
+        <img src="https://i.imgur.com/g6JNNuB.png" alt="">
+        <h3>Fernando Merim</h3>
+        <small>Dev. Full Stack Java Jr.</small>
+        <p>Formado em Ciências Contábeis e atualmente cursando Sistemas de Informação. Ser referência, fazer a diferença e simplificar a vida das pessoas através da tecnologia são os meus objetivos. </p>
+                 
+      </div>
+      
+      <div class="col-md-3  d-flex align-items-center flex-column">
+        <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
+        <h3>Gabriel Cassimiro</h3>
+        <small>Dev. Full Stack Java Jr.</small>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown  </p>
+                    
+      </div>
+
+      <div class="col-md-3  d-flex align-items-center flex-column">
         <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
         <h3>Lucas Cruz</h3>
         <small>Dev. Full Stack Java Jr.</small>
         <p>Estudante de Análise e desenvolvimento de sistemas apaixonado por processos criativos, movido por idéias
           inovadoras e tudo que a tecnologia pode viabilizar </p>
+                    
       </div>
+
+      <div class="col-md-3  d-flex align-items-center flex-column">
+        <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
+        <h3>Luis Henrique de Sousa </h3>
+        <small>Dev. Full Stack Java Jr.</small>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown  </p>
+                    
+      </div>
+      
+      
     </div>
   </section>
 </div>
