Editando as configurações do envorioment

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
     </ul>
     <div class="profile d-flex align-items-center mr-5">
       
-      <!-- <h2 class="mr-4">{{nome}}</h2> -->
+      <h2 class="mr-2">{{nome}}</h2>
       <div class="caixa-imagem position-relative ">
         <img src="{{foto}}" class="img-profile img-fluid">
         <div class="icon-online position-absolute"></div>
